// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticate mainnet 1`] = `"mZT9lhJBvrg+/elKOI/uwJWnsl/buGKZzNj2liujgqotMFVqOJ2KJVPFHvbvIJDbtpFjlcbBsAXtTeNwHePRnQE="`;

exports[`authenticate testnet 1`] = `"mZT9lhJBvrg+/elKOI/uwJWnsl/buGKZzNj2liujgqotMFVqOJ2KJVPFHvbvIJDbtpFjlcbBsAXtTeNwHePRnQE="`;

exports[`createLink generate proof on mainnet 1`] = `
Object {
  "account": "f17lxg2i2otnl7mmpw2ocd6o4e3b4un3272vny6ka@fil:f",
  "message": "Create a new 3Box profile

- 
Your unique profile ID is did:3:bafysdfwefwe",
  "signature": "BmWZPnujAFNLv55QSaHf2NaVW9KsvsFc3tB4WIjKnz4nWWhKEpTuS23SSNF+zQIxCrzKGeV+85evxbGUmlvHkAE=",
  "type": "eoa-tx",
  "version": 2,
}
`;

exports[`createLink generate proof on testnet 1`] = `
Object {
  "account": "t17lxg2i2otnl7mmpw2ocd6o4e3b4un3272vny6ka@fil:t",
  "message": "Create a new 3Box profile

- 
Your unique profile ID is did:3:bafysdfwefwe",
  "signature": "BmWZPnujAFNLv55QSaHf2NaVW9KsvsFc3tB4WIjKnz4nWWhKEpTuS23SSNF+zQIxCrzKGeV+85evxbGUmlvHkAE=",
  "type": "eoa-tx",
  "version": 2,
}
`;
